Updating graph
* Implemented MatrixGraph
* Changed save/load logics (test not passing)